--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ hr {
 .info {
   font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
   font-size: 12px;
+  margin-bottom: 20px;
 }
 
 input[type="text"]:-webkit-input-placeholder {
