--- a/style.css
+++ b/style.css
@@ -17,7 +17,9 @@ div {
 }
 
 div.ltr {
+  -webkit-margin-before: 1em; 
   -webkit-margin-after: 1em; 
+  margin-top: 1em;
   margin-bottom: 1em;
 }
 
